crates/render/src/snapshots/mix_render__replay__installed-events.snap
---
source: crates/render/src/replay.rs
expression: "std::str::from_utf8(observed).expect(\"what mix prints is UTF-8\")"
---
{"header":{"format":"mix.capture.v1","mixVersion":"0.1.0","request":"01920000-0000-7000-8000-000000000001"}}
{"record":{"offset":"0s","envelope":{"seq":"1","request":"01920000-0000-7000-8000-000000000001","nodeStarted":{"id":"1","key":"install","command":{"mixVersion":"0.1.0","schemaMinor":7,"install":{"packages":["hello"]}}}}}}
{"record":{"offset":"1s","envelope":{"seq":"2","request":"01920000-0000-7000-8000-000000000001","nodeStarted":{"id":"2","parent":"1","key":"lock","lockWait":{"lock":"/var/lib/mix/lock","holder":"alice","command":"install"}}}}}
{"record":{"offset":"2s","envelope":{"seq":"3","request":"01920000-0000-7000-8000-000000000001","nodeFinished":{"id":"2","status":"STATUS_SUCCEEDED"}}}}
{"record":{"offset":"3s","envelope":{"seq":"4","request":"01920000-0000-7000-8000-000000000001","nodeStarted":{"id":"3","parent":"1","key":"plan","plan":{"title":"install"}}}}}
{"record":{"offset":"4s","envelope":{"seq":"5","request":"01920000-0000-7000-8000-000000000001","nodeStarted":{"id":"4","parent":"3","key":"write-config","step":{"verb":"VERB_WRITING","subject":"package list"}}}}}
{"record":{"offset":"5s","envelope":{"seq":"6","request":"01920000-0000-7000-8000-000000000001","nodeStarted":{"id":"5","parent":"4","key":"a1","action":{"operation":"OPERATION_PUT_FILE","subject":"/home/ciuser/.local/state/mix/state"}}}}}
{"record":{"offset":"6s","envelope":{"seq":"7","request":"01920000-0000-7000-8000-000000000001","nodeProgress":{"id":"5","observed":{"observations":[{"contents":"/home/ciuser/.local/state/mix/state","contentsFact":{"present":true,"length":"412"}}]}}}}}
{"record":{"offset":"7s","envelope":{"seq":"8","request":"01920000-0000-7000-8000-000000000001","nodeProgress":{"id":"5","journaled":{"prepared":{"undo":[{"operation":"OPERATION_RESTORE","subject":"/home/ciuser/.local/state/mix/state"}]}}}}}}
{"record":{"offset":"8s","envelope":{"seq":"9","request":"01920000-0000-7000-8000-000000000001","nodeFinished":{"id":"5","status":"STATUS_SUCCEEDED"}}}}
{"record":{"offset":"9s","envelope":{"seq":"10","request":"01920000-0000-7000-8000-000000000001","nodeFinished":{"id":"4","status":"STATUS_SUCCEEDED"}}}}
{"record":{"offset":"10s","envelope":{"seq":"11","request":"01920000-0000-7000-8000-000000000001","nodeStarted":{"id":"6","parent":"3","key":"activate","step":{"verb":"VERB_INSTALLING","subject":"hello"}}}}}
{"record":{"offset":"11s","envelope":{"seq":"12","request":"01920000-0000-7000-8000-000000000001","nodeStarted":{"id":"7","parent":"6","key":"a2","action":{"operation":"OPERATION_ACTIVATE_PROFILE","subject":"ciuser's profile"}}}}}
{"record":{"offset":"12s","envelope":{"seq":"13","request":"01920000-0000-7000-8000-000000000001","nodeStarted":{"id":"8","parent":"7","key":"p1","process":{"program":"nix","args":["build"]}}}}}
{"record":{"offset":"13s","envelope":{"seq":"14","request":"01920000-0000-7000-8000-000000000001","nodeFinished":{"id":"8","status":"STATUS_SUCCEEDED"}}}}
{"record":{"offset":"14s","envelope":{"seq":"15","request":"01920000-0000-7000-8000-000000000001","nodeStarted":{"id":"9","parent":"7","key":"d1","download":{"artifact":"hello","url":"http://mirror.internal/hello.nar"}}}}}
{"record":{"offset":"15s","envelope":{"seq":"16","request":"01920000-0000-7000-8000-000000000001","nodeProgress":{"id":"9","fetch":{"url":"http://mirror.internal/hello.nar"}}}}}
{"record":{"offset":"16s","envelope":{"seq":"17","request":"01920000-0000-7000-8000-000000000001","nodeProgress":{"id":"9","bytes":{"done":"1024","total":"2048"}}}}}
{"record":{"offset":"17s","envelope":{"seq":"18","request":"01920000-0000-7000-8000-000000000001","nodeFinished":{"id":"9","status":"STATUS_SUCCEEDED"}}}}
{"record":{"offset":"18s","envelope":{"seq":"19","request":"01920000-0000-7000-8000-000000000001","nodeStarted":{"id":"10","parent":"7","key":"n1","nixActivity":{"activityType":"build","text":"building hello"}}}}}
{"record":{"offset":"19s","envelope":{"seq":"20","request":"01920000-0000-7000-8000-000000000001","nodeFinished":{"id":"10","status":"STATUS_SUCCEEDED"}}}}
{"record":{"offset":"20s","envelope":{"seq":"21","request":"01920000-0000-7000-8000-000000000001","nodeProgress":{"id":"7","waiting":{"lock":"/home/ciuser/.local/state/nix/profiles/profile.lock","holder":"ciuser","command":"nix-env -i hello"}}}}}
{"record":{"offset":"21s","envelope":{"seq":"22","request":"01920000-0000-7000-8000-000000000001","nodeProgress":{"id":"7","command":{"line":"/nix/var/nix/profiles/default/bin/nix build"}}}}}
{"record":{"offset":"22s","envelope":{"seq":"23","request":"01920000-0000-7000-8000-000000000001","nodeProgress":{"id":"7","substitution":{"path":"/nix/store/xl1h9i29pgq2q5cszjhm5wpfxfbbqwyi-glibc-2.40","name":"glibc-2.40"}}}}}
{"record":{"offset":"23s","envelope":{"seq":"24","request":"01920000-0000-7000-8000-000000000001","nodeProgress":{"id":"7","build":{"derivation":"/nix/store/bbx79xgf89bvd25i1sivdcykhy39bz14-hello-2.12.drv","name":"hello-2.12"}}}}}
{"record":{"offset":"24s","envelope":{"seq":"25","request":"01920000-0000-7000-8000-000000000001","nodeProgress":{"id":"7","builds":{"buildsDone":"1","buildsExpected":"3"}}}}}
{"record":{"offset":"25s","envelope":{"seq":"26","request":"01920000-0000-7000-8000-000000000001","nodeProgress":{"id":"7","line":{"text":"building hello","stream":"STREAM_STDERR"}}}}}
{"record":{"offset":"26s","envelope":{"seq":"27","request":"01920000-0000-7000-8000-000000000001","nodeProgress":{"id":"7","commandFinished":{"line":"/nix/var/nix/profiles/default/bin/nix build","exitCode":0}}}}}
{"record":{"offset":"27s","envelope":{"seq":"28","request":"01920000-0000-7000-8000-000000000001","nodeFinished":{"id":"7","status":"STATUS_SUCCEEDED"}}}}
{"record":{"offset":"28s","envelope":{"seq":"29","request":"01920000-0000-7000-8000-000000000001","diagnostic":{"code":"CODE_GIT_RECORD_FAILED","severity":"SEVERITY_WARNING","node":"6","message":"could not record the change in git","causes":[{"code":"CODE_COMMAND_FAILED","severity":"SEVERITY_ERROR","message":"git commit failed","command":{"command":"git commit","exitStatus":128,"outputTail":"fatal: not a git repository"}}]}}}}
{"record":{"offset":"29s","envelope":{"seq":"30","request":"01920000-0000-7000-8000-000000000001","nodeFinished":{"id":"6","status":"STATUS_SUCCEEDED"}}}}
{"record":{"offset":"30s","envelope":{"seq":"31","request":"01920000-0000-7000-8000-000000000001","nodeFinished":{"id":"3","status":"STATUS_SUCCEEDED"}}}}
{"record":{"offset":"31s","envelope":{"seq":"32","request":"01920000-0000-7000-8000-000000000001","nodeFinished":{"id":"1","status":"STATUS_SUCCEEDED","install":{"added":["hello"]}}}}}
