crates/render/src/snapshots/mix_render__replay__interrupted-default.snap
---
source: crates/render/src/replay.rs
expression: "std::str::from_utf8(observed).expect(\"what mix prints is UTF-8\")"
---
     Writing package list
note: cancelling and putting the package list back
help: press Ctrl-C again to leave it running in the background

Rolling back package list
   Cancelled `mix install` in 16.00s
