crates/render/src/snapshots/mix_render__replay__interrupted-v.snap
---
source: crates/render/src/replay.rs
expression: "std::str::from_utf8(observed).expect(\"what mix prints is UTF-8\")"
---
     Writing package list
     Writing /home/ciuser/.local/state/mix/state
note: cancelling and putting the package list back
help: press Ctrl-C again to leave it running in the background

Rolling back package list
   Restoring /home/ciuser/.local/state/mix/state
   Cancelled `mix install` in 16.00s
