crates/render/src/snapshots/mix_render__replay__interrupted-vv.snap
---
source: crates/render/src/replay.rs
expression: "std::str::from_utf8(observed).expect(\"what mix prints is UTF-8\")"
---
note: request 01920000-0000-7000-8000-000000000002
     Writing package list
     Writing /home/ciuser/.local/state/mix/state
      Exited on signal 2: `/usr/bin/git add`
note: cancelling and putting the package list back
help: press Ctrl-C again to leave it running in the background

Rolling back package list
   Restoring /home/ciuser/.local/state/mix/state
   Cancelled `mix install` in 16.00s
